syntax = "proto3";

package raft;

message Request_Vote {
	sint32 term = 1;
	string candidateId = 2;
	sint32 lastLogIndex = 3;
	sint32 lastLogTerm = 4;
}

message RequestVoteResponse {
	sint32 term = 1;
	bool voteGranted = 2;
	float leaseDuration = 3;
}

message Entry {
	string key = 1;
}

message Append_Entries {
	sint32 term = 1;
	string leaderId = 2;
	sint32 prevLogIndex = 3;
	sint32 prevLogTerm = 4;
	repeated string entries = 5;
	sint32 leaderCommit = 6;
}

message AppendEntriesResponse {
	sint32 term = 1;
	bool success = 2;
}

// Request message for client interactions
message Serve_Client {
  string Request = 1;
}

// Response message for client interactions
message ServeClientResponse {
  string Data = 1;
  string LeaderID = 2;
  bool Success = 3;
}

service Raft {
	rpc RequestVote(Request_Vote) returns (RequestVoteResponse);
	rpc AppendEntries(Append_Entries) returns (AppendEntriesResponse);
	rpc ServeClient(Serve_Client) returns (ServeClientResponse);
}
